<resources>
    <string name="app_name">DompetQ</string>
    <string name="title_summary">Ringkasan</string>
    <string name="title_description">Berikut statistik keuanganmu</string>
    <string name="title_month">Bulanan</string>
    <string name="title_week">Mingguan</string>
    <string name="title_day">Harian</string>
    <string name="title_bill">Tagihan</string>
    <string name="title_savings">Tabungan</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_income">Pemasukan</string>
    <string name="title_expenses">Pengeluaran</string>
    <string name="title_add_bill">Tambah Tagihan</string>
    <string name="title_label_add_bill_name">Nama Tagihan</string>
    <string name="title_hint_bill_name">Tagihan Listrik</string>
    <string name="title_label_add_bill_amount">Jumlah Tagihan</string>
    <string name="title_label_add_bill_category">Kategori</string>
    <string name="title_hint_bill_amount">Rp. 500.000</string>
    <string name="title_hint_bill_category">Listrik</string>
    <string name="title_save_bill">Simpan Tagihan</string>
    <string name="title_label_add_due_date">Tanggal Jatuh Tempo</string>
    <string name="title_hint_bill_due_date">10 April 2021</string>
    <string name="title_is_not_empty">Silahkan Isi terlebih dahulu</string>
    <string name="title_label_add_notes">Catatan</string>
    <string name="title_hint_bill_notes">Optional</string>
    <string name="title_information_increase">Total pemasukan bulan ini</string>
    <string name="title_information_decreased">Total pengeluaran bulan ini</string>
    <string name="title_add_transaction">Tambah Transaksi</string>
    <string name="title_label_add_trans_name">Nama Transaksi</string>
    <string name="title_hint_trans_name">Dapat Bonus Project</string>
    <string name="title_label_add_trans_category">Kategori</string>
    <string name="title_hint_trans_category">Gaji</string>
    <string name="title_label_add_trans_amount">Jumlah</string>
    <string name="title_label_add_trans_date">Tanggal Transaksi</string>
    <string name="title_add_savings">Tambah Saldo Tabungan</string>
    <string name="title_information_balance">Total saldo anda saat ini</string>
    <string name="title_last_transaction">Transaksi Terakhir</string>
    <string name="title_information_bill">Total tagihan anda saat ini</string>
    <string name="title_wishlist">Daftar Keinginan</string>
    <string name="title_receivable">Hutang</string>
    <string name="title_settings">Pengaturan</string>
    <string name="title_report">Laporan</string>

</resources>