<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/spacing_xlarge"
                android:layout_height="@dimen/spacing_xlarge"
                android:layout_centerVertical="true"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/bg_circle_white"
                android:src="@drawable/ic_back_24"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvTitleToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_add_bill"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_18"
                android:layout_toEndOf="@+id/imgBack"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        style="@style/backgroundCustom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xmedium"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_rounded_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLabelName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label_add_bill_name"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/spacing_mxlarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"/>

                <EditText
                    android:id="@+id/etName"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:hint="@string/title_hint_bill_name"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/light"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelName" />

                <TextView
                    android:id="@+id/tvLabelCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label_add_bill_category"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/spacing_mxlarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etName"/>

                <EditText
                    android:id="@+id/etCategory"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:hint="@string/title_hint_bill_category"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/light"
                    android:textSize="@dimen/font_16"
                    android:editable="false"
                    android:focusable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelCategory" />

                <TextView
                    android:id="@+id/tvLabelAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label_add_bill_amount"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/spacing_mxlarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCategory"/>

                <EditText
                    android:id="@+id/etAmount"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:hint="@string/title_hint_bill_amount"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:inputType="number"
                    android:fontFamily="@font/light"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelAmount" />

                <TextView
                    android:id="@+id/tvLabelDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label_add_due_date"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/spacing_mxlarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etAmount"/>

                <EditText
                    android:id="@+id/etDueDate"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:hint="@string/title_hint_bill_due_date"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/light"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:editable="false"
                    android:focusable="false"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelDueDate" />

                <TextView
                    android:id="@+id/tvLabelNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label_add_notes"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/spacing_mxlarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etDueDate"/>

                <EditText
                    android:id="@+id/etNotes"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:hint="@string/title_hint_bill_notes"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/light"
                    android:textSize="@dimen/font_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelNotes" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/title_save_bill"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:background="@drawable/bg_button_rounded"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/etNotes"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>