<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_summary"
        android:textSize="@dimen/font_28"
        android:fontFamily="@font/semibold"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/textLight"
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/title_description"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_middle"
        android:textSize="@dimen/font_18"
        app:layout_constraintTop_toBottomOf="@+id/tvToolbar" />

    <RadioGroup
        android:id="@+id/rbGroup"
        style="@style/tabDefaultStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <RadioButton
            android:id="@+id/rbMonth"
            style="@style/radioSelectorStyle"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:checked="true"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/spacing_medium"
            android:text="@string/title_month"
            android:textSize="@dimen/font_16"
            android:fontFamily="@font/semibold"
            android:textColor="@drawable/bg_text_radiobutton_selector" />

        <RadioButton
            android:id="@+id/rbWeek"
            style="@style/radioSelectorStyle"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/spacing_medium"
            android:text="@string/title_week"
            android:textSize="@dimen/font_16"
            android:fontFamily="@font/semibold"
            android:textColor="@drawable/bg_text_radiobutton_selector" />

        <RadioButton
            android:id="@+id/rbDay"
            style="@style/radioSelectorStyle"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/spacing_medium"
            android:text="@string/title_day"
            android:textSize="@dimen/font_16"
            android:fontFamily="@font/semibold"
            android:textColor="@drawable/bg_text_radiobutton_selector" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/cardCustomStyle"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:layout_marginBottom="@dimen/spacing_mxlarge"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/rbGroup">

        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Rp 10.000.000"
            android:textColor="@color/green_400"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvExpenses"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvExpenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="-Rp 4.142.000"
            android:textColor="@color/red_400"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintLeft_toRightOf="@+id/tvIncome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabelIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xmedium"
            android:gravity="center"
            android:text="@string/title_income"
            android:fontFamily="@font/light"
            android:textSize="@dimen/font_16"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvExpenses"
            app:layout_constraintTop_toBottomOf="@id/tvExpenses" />

        <TextView
            android:id="@+id/tvLabelExpenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xmedium"
            android:gravity="center"
            android:text="@string/title_expenses"
            app:layout_constraintHorizontal_weight="5"
            android:fontFamily="@font/light"
            android:textSize="@dimen/font_16"
            app:layout_constraintLeft_toRightOf="@+id/tvIncome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvExpenses" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>